# everything-mcp-rs

./: Cargo.toml  README.md
src/: main.rs
