[package]
name = "everything-mcp-rs"
version = "0.1.0"
edition = "2021"
description = "Everything Search MCP Server in Rust - zero-dependency deployment"
authors = ["STRYK"]

[dependencies]
# MCP Server - official Rust SDK
rmcp = { version = "0.8", features = ["server", "transport-io"] }

# Dynamic library loading - no bindgen needed
libloading = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Schema generation for tool parameters
schemars = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Unicode string handling
widestring = "1"

# Lazy initialization
once_cell = "1"

# CLI parsing
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
